other-mpol/inject-sealed-secret-config/.chainsaw-test/exception/pod-unchanged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exception-pod
  namespace: default
  labels: {coco: enabled}
  annotations: {coco.io/sealed-secret-config: sealed-secret-config}
spec:
  containers:
  - name: app
    image: nginx:1.20
    (length(env) == `1`): true
    env: [{name: EXISTING_VAR, value: existing-value}]
